# vector-database

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 01_introduction.ipynb  02_sqlitedb.ipynb  03_chromadb.ipynb
src/io/: __init__.py  chroma.py  local.py  sqlite.py
src/pipe/: __init__.py  etl.py
src/utils/: __init__.py  constants.py  utils.py
