[tool.poetry]
name = "vector-database"
version = "0.1.0"
description = ""
authors = ["RWallan <3am.richardwallan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
ipykernel = "^6.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
