[tool.poetry]
name = "vector-database"
version = "0.1.0"
description = ""
authors = ["RWallan <3am.richardwallan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
ipykernel = "^6.26.0"
pandas = "^2.1.2"
onnxruntime = "1.16.1"
chromadb = "0.4.15"
pyarrow = "^14.0.1"
fastparquet = "^2023.10.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"
black = {extras = ["jupyter"], version = "^23.11.0"}
isort = "^5.12.0"
taskipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
profile = "black"

[tool.ruff]
line-length=79
exclude = [".venv"]

[tool.taskipy.tasks]
lint = "ruff . && black --check . && isort . --diff"
format = "black . && isort ."
